Fix graph not showing

--- a/visualiser/src/views/DataView/components/GraphContainer/GraphContainer.scss
+++ b/visualiser/src/views/DataView/components/GraphContainer/GraphContainer.scss
@@ -1,5 +1,6 @@
 .graph-container {
     margin-bottom: 10px;
+    height: 200px;
 }
 
 .time-tooltip {
